--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img src="images/banner.png" class="heirs-banner img-fluid" alt="heirs">
             </div>
             <div class="col-sm-6">
-                <h1>You are invited <br>to our launch</h1>
+                <h1>You are invited <br>to our launch - June 1st</h1>
                 <p>We are excited to unveil the simple life! With just a click of a button, your finances could be fully secured for your loved ones and your future. Join us to watch how it works. One lucky guest could win our first-class goody bag.</p>
                 <a class="btn btn-heirs" href="https://mailchi.mp/8f526ed052b5/hilxhla" target="_blank">RESERVE YOUR SPOT</a>
                 <a class="btn btn-dark" href="/insurance.html">BUY INSURANCE</a>
